--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,15 +2,15 @@
 $px-only: false;
 
 // imports fonts
-@import "modules/fonts";
+@import "modules/_fonts";
 
 // imports global rules
 @import "modules/_global";
 
 // imports functions & mixins
-@import "modules/rem";
-@import "modules/vendor-prefix";
-@import "modules/anchor";
+@import "modules/_rem";
+@import "modules/_vendor-prefix";
+@import "modules/_anchor";
 
 // imports all components
-@import "components/all";
+@import "components/_all";
