--- a/web/style/style.css
+++ b/web/style/style.css
@@ -55,6 +55,12 @@ body {
   height: 100%;
 }
 
+body {
+  border-top: 1rem solid #ffd400;
+  background: #131a20;
+  color: #fff;
+}
+
 html {
   font-size: 16px;
 }
@@ -85,27 +91,26 @@ body * {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  margin: 4rem 0;
+  margin: 8rem auto;
 }
 
 .logotype {
-  font-size: 2rem;
-  color: #ee2560;
+  font-size: 2.5rem;
+  background: #ffd400;
+  color: #131a20;
+  padding: 0.8rem 1rem;
   font-weight: 600;
-  background: -webkit-linear-gradient(left, #ee2560, #ffd400);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
 }
 
 .link {
-  color: #444;
+  color: #ffd400;
+  padding: 0.3rem;
   text-decoration: none;
-  border-bottom: 0.1rem dotted #ddd;
-  padding-bottom: 0.2rem;
 }
 
 .link:hover {
-  color: #888;
+  background: #ffd400;
+  color: #131a20;
 }
 
 .twitter {
@@ -120,14 +125,14 @@ body * {
 
 .paragraph {
   line-height: 1.6em;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   font-size: 1.3rem;
 }
 
 /* TALK */
 
 .record__event {
-  color: #444;
+  color: #ccc;
   margin-top: 0.3rem;
 }
 
@@ -161,7 +166,7 @@ body * {
 
 .record__title {
   font-size: 1.7rem;
-  color: #444;
+  color: #ccc;
 }
 
 .record__title--todo {
@@ -169,7 +174,7 @@ body * {
 }
 
 .record__language {
-  color: #888;
+  color: #ccc;
   font-weight: 200;
   margin-top: 0.3rem;
   font-size: 1.2rem;
