--- a/web/styles.css
+++ b/web/styles.css
@@ -1,78 +1,15 @@
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-
-body {
-  line-height: 1;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-blockquote, q {
-  quotes: none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/* --- */
-
 :root {
   --color-primary: #ffd400;
   --color-background: #131a20;
-  --color-text: #fff;
+  --color-text: #eee;
   --color-text-secondary: #9b9b9b;
   --color-text-on-primary: #131a20;
 }
 
-html,
 body {
-  width: 100%;
-  height: 100%;
-}
-
-body {
-  border-top: 0.6rem solid var(--color-primary);
   background: var(--color-background);
   color: var(--color-text);
+  width: 100%;
 }
 
 html {
@@ -83,6 +20,8 @@ body {
   font-family: 'Encode Sans', sans-serif;
   display: inline-block;
   font-weight: lighter;
+  padding: 0;
+  margin: 0;
 }
 
 body * {
@@ -101,25 +40,43 @@ body * {
 }
 
 .nav {
+  background: var(--color-background);
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  margin: 4.5rem auto;
+  position: sticky;
+  top: 0;
+  right: 0;
+  left: 0;
+  box-shadow: 0 14px 100px #000;
+  height: 86px;
+  padding: 0 32px 4px 32px;
+}
+
+.nav__link {
+  color: var(--color-text);
+  text-decoration: none;
+  font-weight: bold;
+}
+
+@media all and (min-width: 480px) {
+  .nav__link:hover {
+    color: var(--color-primary);
+  }
 }
 
 .logotype {
-  font-size: 2.5rem;
-  background: var(--color-primary);
-  color: var(--color-text-on-primary);
-  padding: 0.8rem 1rem;
-  font-weight: 600;
+  font-size: 32px;
+  color: var(--color-text);
+  font-weight: 500;
+  text-transform: uppercase;
+  margin: 0;
 }
 
 .link {
   color: var(--color-primary);
   padding: 0.3rem;
-  margin: 0 -0.3rem;
   text-decoration: none;
   font-weight: bold;
 }
@@ -130,6 +87,25 @@ body * {
 
 @media all and (min-width: 480px) {
   .link:hover {
+    background: var(--color-primary);
+    color: var(--color-text-on-primary);
+  }
+}
+
+.block-link {
+  color: var(--color-primary);
+  padding: 0 30px;
+  text-decoration: none;
+  font-weight: bold;
+  border: 1px solid var(--color-primary);
+  border-radius: 24px;
+  height: 40px;
+  display: inline-flex;
+  align-items: center;
+}
+
+@media all and (min-width: 480px) {
+  .block-link:hover {
     background: var(--color-primary);
     color: var(--color-text-on-primary);
   }
@@ -157,12 +133,11 @@ body * {
 }
 
 .heading {
-  font-size: 0.7rem;
-  letter-spacing: 0.4em;
-  text-transform: uppercase;
-  color: var(--color-text-secondary);
+  font-size: 16px;
+  color: var(--color-primary);
   font-weight: bolder;
   display: inline-block;
+  margin: 0;
 }
 
 .paragraph {
